test/distinctname/pass/method.j
class A { Void main(){return;} }
class B {
  Void f(Int a, Int b) { return; }
  Void f(Int a) { return; }
  Int g(Int a, Int b) { return a; }
}
