test/distinctname/fail/method.j
class A { Void main(){return;} }
class B {
  Void f(Int a, Int b) { return; }
  Int f(Int a, Int b) { return a; }
}
